# quantforge

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile.render  LICENSE  README.md  docker-compose.yml  job-description.txt  prometheus.yml  start-render.sh
.github/workflows/: ci.yml
ai_research/: Dockerfile  app.py  requirements.txt  sentiment.py
ai_research/agents/: analyst.py  execution.py  portfolio.py  risk_analyst.py
analytics/: metrics.py  requirements.txt
analytics/backtest/: engine.py  test_backtest.py
docs/: USER_GUIDE.md
feed_handler/: CMakeLists.txt  Dockerfile
feed_handler/src/: main.cpp
gateway/: .dockerignore  Dockerfile  requirements.txt
gateway/app/: main.py  protocol.py  risk.py
gateway/app/db/: init_db.py
gateway/tests/: test_protocol.py  test_risk.py  test_settlement.py
grafana/dashboards/: quantforge.json
grafana/provisioning/dashboards/: dashboards.yml
matching_engine/: CMakeLists.txt  Dockerfile
matching_engine/include/: MatchingEngine.hpp  OrderBook.hpp
matching_engine/src/: MatchingEngine.cpp  OrderBook.cpp  benchmark.cpp  main.cpp  test_matching.cpp
scripts/: e2e_integration_test.py  market_data_feed.py  market_simulator.py
shared/cpp/: RedisPublisher.hpp  Types.hpp  WireProtocol.hpp
shared/proto/: messages.proto
terminal/: Dockerfile  index.html  package-lock.json  package.json
terminal/src/: App.tsx  config.ts  index.css
terminal/src/components/: AIChatConsole.tsx  Chart.tsx  OrderBook.tsx  Portfolio.tsx
